// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArtworkPage tests component renders correctly 1`] = `
<div
  data-testid="loading-page-container"
>
  <div
    class="flex justify-center items-center h-screen bg-gray-50 dark:bg-gray-900"
    role="status"
  >
    <svg />
  </div>
</div>
`;

exports[`ArtworkPage tests component renders delete warning popup correctly 1`] = `
<div
  data-testid="loaded-artwork-page-container"
>
  <nav
    class="bg-gray-800 border-gray-200 dark:bg-gray-200 w-full border-b dark:border-gray-600"
  >
    <div
      class="max-w-screen-xl flex flex-wrap justify-between mx-auto p-4"
    >
      <div
        class="flex items-center mt-1"
      >
        <h1
          class="logo text-gray-200 dark:text-gray-900 text-6xl "
        >
          ethnopedia
        </h1>
      </div>
      <div
        class="flex items-center md:order-2"
      >
        <button
          class="text-gray-800 bg-white border border-gray-300 focus:outline-none
                           hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm
                           p-2.5 mr-2 dark:bg-gray-800 dark:text-white dark:border-gray-600
                           dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
          type="button"
        >
          <svg
            class="w-4 h-4 m-0.5"
          />
        </button>
        <div
          class="rounded-full bg-gray-300
                        p-3 cursor-pointer"
        >
          <svg />
        </div>
        <h2
          class="font-semibold ml-2 text-lg dark:text-gray-800 text-white"
        >
          123
        </h2>
      </div>
      <div
        class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1"
        id="navbar-user"
      />
    </div>
  </nav>
  <div
    class="overflow-y-auto flex items-center overflow-x-hidden fixed z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full "
    id="popup-modal"
  >
    <div
      class="fixed inset-0 bg-black opacity-50"
    />
    <div
      class="relative p-4 w-full max-w-md max-h-full "
    >
      <div
        class="relative bg-white rounded-lg shadow-md dark:bg-gray-700 border-gray-200 border"
      >
        <div
          class="flex justify-end"
        >
          <button
            class="items-end content-end border-none"
            data-testid="exitButton"
            type="button"
          >
            <svg />
          </button>
        </div>
        <hr
          class="border-t border-gray-200 dark:border-gray-600 w-8 self-center w-full"
        />
        <div
          class="p-4 md:p-5 text-center"
        >
          <h3
            class="mb-5 text-lg font-normal text-gray-700 font-semibold dark:text-gray-400"
          >
            Czy na pewno chcesz usunąć rekord?
          </h3>
          <button
            class="text-white bg-red-600 font-semibold hover:bg-red-800 focus:ring-4
                            focus:outline-none focus:ring-red-600 dark:focus:ring-red-800
                            font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center me-2"
            data-modal-hide="popup-modal"
            type="button"
          >
            Usuń
          </button>
          <button
            class="text-gray-800 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none
                            font-semibold
                            focus:ring-gray-200 rounded-lg border border-gray-300 text-sm font-medium px-5 py-2.5
                            hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500
                            dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600"
            data-modal-hide="popup-modal"
            type="button"
          >
            Anuluj
          </button>
        </div>
      </div>
    </div>
  </div>
  <section
    class="p-2 sm:p-4"
  >
    <div
      class="mx-auto max-w-screen-xl lg:px-6"
    >
      <nav
        class="flex"
      >
        <ol
          class="inline-flex items-center space-x-1 md:space-x-2"
        >
          <li
            class="inline-flex items-center text-lg"
          >
            <a
              class="inline-flex items-center font-medium text-gray-800 hover:text-blue-600"
              href="/"
            >
              Powrót do listy kolekcji
            </a>
          </li>
          <span
            class="self-center"
          >
            <svg />
          </span>
          <li
            class="inline-flex items-center text-lg"
          >
            <a
              class="inline-flex items-center font-medium text-gray-800 hover:text-blue-600"
              href="/collections/example collection/artworks"
            >
              Powrót do listy utworów
            </a>
          </li>
        </ol>
      </nav>
      <div
        class="flex flex-row"
      >
        <div
          class="mt-2 flex-2"
        >
          <h1
            class="text-4xl font-bold text-gray-800 dark:text-white mb-2"
          >
            testowy
          </h1>
          <p
            class="text-xl text-gray-600 dark:text-gray-400 mt-1"
          >
            Artyści: 
            testowi
          </p>
          <p
            class="text-lg text-gray-500 dark:text-gray-300 mt-1"
          >
            Rok: 
            966
          </p>
          <p
            class="text-lg text-gray-500 dark:text-gray-300 mt-1"
          >
            Kolekcja: 
            example collection
          </p>
        </div>
        <div
          class="flex-1 mt-4 flex justify-end text-gray-700"
        >
          <button
            class="text-lg font-semibold h-fit mr-4"
          >
            <span
              class="flex-row flex items-center"
            >
              <svg />
              <p
                class="ml-2"
              >
                Edytuj
              </p>
            </span>
          </button>
          <button
            class="text-lg font-semibold h-fit border-red-700 text-red-700 bg-red-50 hover:bg-white"
          >
            <span
              class="flex-row flex items-center"
            >
              <svg />
              <p
                class="ml-2"
              >
                Usuń
              </p>
            </span>
          </button>
        </div>
      </div>
      <button
        class="mt-4 px-4 py-2 bg-blue-500 text-white hover:bg-blue-400 font-semibold border-none"
        type="button"
      >
        Pokaż więcej
      </button>
    </div>
  </section>
</div>
`;

exports[`ArtworkPage tests component rerenders correctly when data is fetched from API 1`] = `
<div
  data-testid="loaded-artwork-page-container"
>
  <nav
    class="bg-gray-800 border-gray-200 dark:bg-gray-200 w-full border-b dark:border-gray-600"
  >
    <div
      class="max-w-screen-xl flex flex-wrap justify-between mx-auto p-4"
    >
      <div
        class="flex items-center mt-1"
      >
        <h1
          class="logo text-gray-200 dark:text-gray-900 text-6xl "
        >
          ethnopedia
        </h1>
      </div>
      <div
        class="flex items-center md:order-2"
      >
        <button
          class="text-gray-800 bg-white border border-gray-300 focus:outline-none
                           hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm
                           p-2.5 mr-2 dark:bg-gray-800 dark:text-white dark:border-gray-600
                           dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
          type="button"
        >
          <svg
            class="w-4 h-4 m-0.5"
          />
        </button>
        <button
          class="mr-2 bg-blue-500 hover:bg-blue-400 font-semibold text-white border-none"
          type="button"
        >
          Zaloguj się
        </button>
        <button
          class="bg-blue-500 hover:bg-blue-400 font-semibold text-white border-none"
          type="button"
        >
          Zarejestruj się
        </button>
      </div>
      <div
        class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1"
        id="navbar-user"
      />
    </div>
  </nav>
  <section
    class="p-2 sm:p-4"
  >
    <div
      class="mx-auto max-w-screen-xl lg:px-6"
    >
      <nav
        class="flex"
      >
        <ol
          class="inline-flex items-center space-x-1 md:space-x-2"
        >
          <li
            class="inline-flex items-center text-lg"
          >
            <a
              class="inline-flex items-center font-medium text-gray-800 hover:text-blue-600"
              href="/"
            >
              Powrót do listy kolekcji
            </a>
          </li>
          <span
            class="self-center"
          >
            <svg />
          </span>
          <li
            class="inline-flex items-center text-lg"
          >
            <a
              class="inline-flex items-center font-medium text-gray-800 hover:text-blue-600"
              href="/collections/example collection/artworks"
            >
              Powrót do listy utworów
            </a>
          </li>
        </ol>
      </nav>
      <div
        class="flex flex-row"
      >
        <div
          class="mt-2 flex-2"
        >
          <h1
            class="text-4xl font-bold text-gray-800 dark:text-white mb-2"
          >
            testowy
          </h1>
          <p
            class="text-xl text-gray-600 dark:text-gray-400 mt-1"
          >
            Artyści: 
            testowi
          </p>
          <p
            class="text-lg text-gray-500 dark:text-gray-300 mt-1"
          >
            Rok: 
            966
          </p>
          <p
            class="text-lg text-gray-500 dark:text-gray-300 mt-1"
          >
            Kolekcja: 
            example collection
          </p>
        </div>
        <div
          class="flex-1 mt-4 flex justify-end text-gray-700"
        >
          <button
            class="text-lg font-semibold h-fit mr-4 bg-gray-100 hover:bg-gray-100"
            disabled=""
            title="Aby edytować rekord musisz się zalogować."
          >
            <span
              class="flex-row flex items-center"
            >
              <svg />
              <p
                class="ml-2"
              >
                Edytuj
              </p>
            </span>
          </button>
          <button
            class="text-lg font-semibold h-fit border-red-700 text-red-700 bg-red-50 hover:bg-red-50"
            disabled=""
            title="Aby usunąć rekord musisz się zalogować."
          >
            <span
              class="flex-row flex items-center"
            >
              <svg />
              <p
                class="ml-2"
              >
                Usuń
              </p>
            </span>
          </button>
        </div>
      </div>
      <button
        class="mt-4 px-4 py-2 bg-blue-500 text-white hover:bg-blue-400 font-semibold border-none"
        type="button"
      >
        Pokaż więcej
      </button>
    </div>
  </section>
</div>
`;

exports[`ArtworkPage tests show more test 1`] = `
<div
  data-testid="loaded-artwork-page-container"
>
  <nav
    class="bg-gray-800 border-gray-200 dark:bg-gray-200 w-full border-b dark:border-gray-600"
  >
    <div
      class="max-w-screen-xl flex flex-wrap justify-between mx-auto p-4"
    >
      <div
        class="flex items-center mt-1"
      >
        <h1
          class="logo text-gray-200 dark:text-gray-900 text-6xl "
        >
          ethnopedia
        </h1>
      </div>
      <div
        class="flex items-center md:order-2"
      >
        <button
          class="text-gray-800 bg-white border border-gray-300 focus:outline-none
                           hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm
                           p-2.5 mr-2 dark:bg-gray-800 dark:text-white dark:border-gray-600
                           dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
          type="button"
        >
          <svg
            class="w-4 h-4 m-0.5"
          />
        </button>
        <button
          class="mr-2 bg-blue-500 hover:bg-blue-400 font-semibold text-white border-none"
          type="button"
        >
          Zaloguj się
        </button>
        <button
          class="bg-blue-500 hover:bg-blue-400 font-semibold text-white border-none"
          type="button"
        >
          Zarejestruj się
        </button>
      </div>
      <div
        class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1"
        id="navbar-user"
      />
    </div>
  </nav>
  <section
    class="p-2 sm:p-4"
  >
    <div
      class="mx-auto max-w-screen-xl lg:px-6"
    >
      <nav
        class="flex"
      >
        <ol
          class="inline-flex items-center space-x-1 md:space-x-2"
        >
          <li
            class="inline-flex items-center text-lg"
          >
            <a
              class="inline-flex items-center font-medium text-gray-800 hover:text-blue-600"
              href="/"
            >
              Powrót do listy kolekcji
            </a>
          </li>
          <span
            class="self-center"
          >
            <svg />
          </span>
          <li
            class="inline-flex items-center text-lg"
          >
            <a
              class="inline-flex items-center font-medium text-gray-800 hover:text-blue-600"
              href="/collections/example collection/artworks"
            >
              Powrót do listy utworów
            </a>
          </li>
        </ol>
      </nav>
      <div
        class="flex flex-row"
      >
        <div
          class="mt-2 flex-2"
        >
          <h1
            class="text-4xl font-bold text-gray-800 dark:text-white mb-2"
          >
            testowy
          </h1>
          <p
            class="text-xl text-gray-600 dark:text-gray-400 mt-1"
          >
            Artyści: 
            testowi
          </p>
          <p
            class="text-lg text-gray-500 dark:text-gray-300 mt-1"
          >
            Rok: 
            966
          </p>
          <p
            class="text-lg text-gray-500 dark:text-gray-300 mt-1"
          >
            Kolekcja: 
            example collection
          </p>
          <ul
            class="px-4 list-[circle]"
          >
            <li>
              Tytuł
              : 
              testowy
              <ul
                class="px-4 list-[square]"
              />
            </li>
            <li>
              Artyści
              : 
              testowi
              <ul
                class="px-4 list-[square]"
              />
            </li>
            <li>
              Rok
              : 
              966
              <ul
                class="px-4 list-[square]"
              />
            </li>
          </ul>
        </div>
        <div
          class="flex-1 mt-4 flex justify-end text-gray-700"
        >
          <button
            class="text-lg font-semibold h-fit mr-4 bg-gray-100 hover:bg-gray-100"
            disabled=""
            title="Aby edytować rekord musisz się zalogować."
          >
            <span
              class="flex-row flex items-center"
            >
              <svg />
              <p
                class="ml-2"
              >
                Edytuj
              </p>
            </span>
          </button>
          <button
            class="text-lg font-semibold h-fit border-red-700 text-red-700 bg-red-50 hover:bg-red-50"
            disabled=""
            title="Aby usunąć rekord musisz się zalogować."
          >
            <span
              class="flex-row flex items-center"
            >
              <svg />
              <p
                class="ml-2"
              >
                Usuń
              </p>
            </span>
          </button>
        </div>
      </div>
      <button
        class="mt-4 px-4 py-2 bg-blue-500 text-white hover:bg-blue-400 font-semibold border-none"
        type="button"
      >
        Pokaż mniej
      </button>
    </div>
  </section>
</div>
`;
